--- a/debian/control
+++ b/debian/control
@@ -9,5 +9,5 @@ Homepage: http://www.qubes-os.org
 Package: qubes-mgmt-salt-dom0-qvm
 Section: admin
 Architecture: all
-Depends: qubes-mgmt-salt-base, qubes-mgmt-salt-config, qubes-mgmt-salt-dom0
+Depends: qubes-mgmt-salt-base, qubes-mgmt-salt-dom0
 Description: Salt formula to interface to many of the Qubes dom0 qvm-* tools via a state file or module.
