Update to Admin API
1. Use 'qubesadmin' instead of 'qubes' module.
2. Adjust services values - encode True/False as strings (see
   documentation about 'features').
3. Drop properties no longer applicable, for which there will be no
   backward compatiblity (not reasonably useful in the past):
    - dir
    - config
    - updateable
    - root-img
    - root-volatile-img
    - private-img
    - flags: force-root

QubesOS/qubes-issues#1825
QubesOS/qubes-issues#2174

--- a/debian.dom0/control
+++ b/debian.dom0/control
@@ -12,6 +12,7 @@ Package: qubes-mgmt-salt-dom0-qvm
 Section: admin
 Architecture: all
 Depends:
+    python-qubesadmin,
     qubes-mgmt-salt-base,
     qubes-mgmt-salt-dom0
 Description: Salt formula to interface to many of the Qubes dom0 qvm-* tools via a state file or module.
