--- a/rpm_spec/qubes-mgmt-salt-dom0-qvm-dom0.spec.in
+++ b/rpm_spec/qubes-mgmt-salt-dom0-qvm-dom0.spec.in
@@ -11,7 +11,7 @@ BuildArch: noarch
 BuildRequires: make
 Requires:  qubes-mgmt-salt
 Requires:  qubes-mgmt-salt-dom0
-Requires:  python3-qubesadmin
+Requires:  python3-qubesadmin >= 4.3.7
 
 
 Source0: %{name}-%{version}.tar.gz
